...
                                    <constraint firstAttribute="height" constant="40" id="jtZ-zr-0IR"/>
                                </constraints>
                                <state key="normal" title="Add" image="red add.png"/>
                                <connections>
                                    <action selector="BAdd:" destination="BYZ-38-t0r" eventType="touchDown" id="VC1-jn-043"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="YHy-dJ-3Cd" colorLabel="IBBuiltInLabel-Blue">
                        <barButtonItem key="leftBarButtonItem" title="Log out" id="sip-fG-eaQ">
                            <connections>
                                <action selector="BLogOut:" destination="BYZ-38-t0r" id="PW6-5t-aNG"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="My Post" id="rqK-Ej-OJn"/>
                    <connections>
                        <outlet property="tableview" destination="8Rz-rZ-Tnm" id="APf-Go-fSK"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Add Event" id="ogC-DH-3BS"/>
                    <connections>
                        <outlet property="EContent" destination="NA8-4Y-wf2" id="fn0-3g-Hty"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Me" id="Zji-Gp-xcx"/>
                    <connections>
                        <outlet property="Name" destination="VXi-2v-yMX" id="2SA-0n-4ls"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xlz-8k-wLx" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Map" image="pyramid-7.png" selectedImage="pyramid-7.png" id="c4R-xX-weH"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nw9-f4-YBq">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B8S-ui-GFY">
                                <rect key="frame" x="170" y="414" width="34" height="30"/>
                                <state key="normal" title="login">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Sign Up" id="Fox-C0-d87">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="6bh-aX-yMM">
                            <connections>
                                <action selector="back:" destination="IH0-hT-Cpn" id="QEK-jo-mwB"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9Rb-1u-U5U" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Posts" image="book-cover-star-7.png" selectedImage="book-cover-star-7.png" id="88O-bU-lmY"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="O3O-oW-Yxa">
...
